fix: hide date filter label on desktop to avoid layout misalignment

--- a/src/views/courriers/listeCourriers/listeCourriers.scss
+++ b/src/views/courriers/listeCourriers/listeCourriers.scss
@@ -290,12 +290,17 @@
 
       .filterDateLabel {
         & {
+          display: block;
           font-size: 0.72em;
           font-weight: 600;
           color: vars.$fontColorSecondary;
           text-transform: uppercase;
           letter-spacing: 0.5px;
           padding-left: 0.25em;
+        }
+
+        @media (min-width: vars.$tabletWidth) {
+          display: none;
         }
       }
 
